<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/ReviewManagement"
        android:textColor="#090909"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textColor="#0B0A0A" />

        <EditText
            android:id="@+id/titleAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titleAnswer"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/Review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Review"
            android:textColor="#0E0E0E"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/reviewAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/reviewAnswer"
            android:inputType="textMultiLine" />

        <Switch
            android:id="@+id/recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommendation" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="#070707"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/nicknameAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nicknameExample"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textColor="#0C0C0C"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/emailAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailAnswer"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="117dp"
            android:layout_height="42dp"
            android:background="@drawable/background"
            android:text="@string/btnCreate" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="102dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:text="@string/btnUpdate" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="97dp"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:text="@string/btnShow" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="124dp"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:text="@string/btnDelete" />

    </LinearLayout>

</LinearLayout>