<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/CurrencyConvert"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/CurrencyConvert"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <ImageView
        android:id="@+id/currencycube"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        app:srcCompat="@drawable/currencycube" />

    <EditText
        android:id="@+id/Value"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/Value"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/USD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/USD"
                android:textColor="#0E0E0E"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/EUR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/EUR"
                android:textColor="#0C0C0C"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/JPY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/JPY"
                android:textColor="#121111"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/INR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/INR"
                android:textColor="#121111"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/convert"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@drawable/background"
            android:text="@string/convert" />

        <EditText
            android:id="@+id/OutputValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/OutputValue"
            android:inputType="textPersonName" />

    </LinearLayout>


</LinearLayout>