<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        app:srcCompat="@drawable/download__1_" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="212dp"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button"
                    android:layout_width="191dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/background"
                    android:text="@string/TripPlanner"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="191dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/background"
                    android:text="@string/Converter"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="191dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/background"
                    android:text="@string/LanguageTips"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

        <TableLayout
            android:layout_width="204dp"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/background"
                    android:text="@string/Explore"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="191dp"
                    android:layout_height="75dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/background"
                    android:text="@string/Schedule"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="191dp"
                    android:layout_height="75dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/background"
                    android:text="@string/WhereAmI"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>
    </LinearLayout>
</LinearLayout>